handle adding and deleting cookies on both the client and the server

--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+	"name": "cookies-playground",
 	"scripts": {
 		"start:client": "cd client && npm run start",
 		"start:server": "cd server && npm run start",
